--- a/display/src/main/resources/templates/events/detail-page.html
+++ b/display/src/main/resources/templates/events/detail-page.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Event</title>
 </head>
 <body style="background-color: #FAFAFA; margin: 0; padding: 0;">
 <div style="display: flex; justify-content: center;">
