--- a/display/src/main/resources/templates/events/detail-page.html
+++ b/display/src/main/resources/templates/events/detail-page.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Event</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+          rel="stylesheet">
+
+    <style>
+        body {
+            font-family: "Noto Sans KR", sans-serif;
+        }
+    </style>
 </head>
 <body style="background-color: #FAFAFA; margin: 0; padding: 0;">
 <div style="display: flex; justify-content: center;">
